# gkill

./: .gitignore  configure.ac
debian/: changelog  control  copyright  files  gkill.substvars
debian/gkill/DEBIAN/: control  md5sums
debian/gkill/usr/share/doc/gkill/: README.Debian
src/: Makefile.am  config.h.in  gkill.c
